Generate Tags(backend) and more than one products mapped in neo4j done

--- a/templates/authentication/contribute.html
+++ b/templates/authentication/contribute.html
@@ -128,11 +128,16 @@
             <a class="dropdown-item" href="freshdesk">FreshDesk</a>
           </div>
         </li>
-      </div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search">
+      
+      </ul>
+      <form class="form-inline my-2 my-lg-0" method=POST action={% url 'search'%} >
+        {%csrf_token%}
+        <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search" name="searched">
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-fw fa-search"></i></button> &nbsp &nbsp&nbsp&nbsp
       </form>
+  
+    </div>
+  
       <div class="btn-group">
         <img type="button" src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/30/ffffff/external-user-interface-kiranshastry-lineal-kiranshastry-1.png" class="btn btn-primary"/>
         <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" >
