--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -175,7 +175,7 @@ main .list .item:hover {
 
 </head>
 <body>
-  <script type="text/javascript">
+  {% comment %} <script type="text/javascript">
     (function(d, m){
         var kommunicateSettings = 
             {"appId":"9059094ea0e64021151495cc12c0f9bf","popupWidget":true,"automaticChatOpenOnNavigation":true};
@@ -185,7 +185,7 @@ main .list .item:hover {
         window.kommunicate = m; m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
 /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-</script>
+</script> {% endcomment %}
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="sh">
   <a class="navbar-brand" href="#" ><img src="/static/29.png" height="40" width="120"></a>
   {% comment %} <a href="#">
