--- a/templates/knowledgepages/freshdesk.html
+++ b/templates/knowledgepages/freshdesk.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRESHDESK</title>
+    {% comment %} <title>Jira</title> {% endcomment %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="icon" href="https://klaindustries.com/wp-content/uploads/2017/07/Light-bulb-icon.png" width="300" height="300" type="image/icon type">
-    <title> {% block title %}FreshDesk{% endblock title %} | Knowledge Platform</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title> {% block title %}Jira{% endblock title %} | Knowledge Platform</title>
   </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">KNOWLEDGE PLATFORM</a>
+        <a class="navbar-brand" href="#"><img src="/static/29.png" height="40" width="120"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item inactive">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/"><i class="fa fa-fw fa-home"></i>Home</a>
             </li>      
         
             <li class="nav-item inactive">
@@ -30,7 +31,7 @@
             
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Filter Knowledges
+                Filter Knowledges 
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="defects" >Defects <span class="sr-only">(current)</span></a>
@@ -49,12 +50,11 @@
             <a class="dropdown-item" href="freshdesk">FreshDesk</a>
           </div>
         </li>
-        
         </div>
         <form class="form-inline my-2 my-lg-0" method=POST action={% url 'search'%} >
           {%csrf_token%}
           <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search" name="searched">
-          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button> &nbsp &nbsp&nbsp&nbsp
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-fw fa-search"></i></button> &nbsp &nbsp&nbsp&nbsp
         </form>
         
         <div class="btn-group">
@@ -67,7 +67,11 @@
           <ul class="dropdown-menu">
             {% comment %} <li><a class="dropdown-item" href="/signup" >Sign up</a></li> {% endcomment %}
             {% comment %} <li><a class="dropdown-item" href="/signin">Sign in</a></li> {% endcomment %}
+            <li><a class="dropdown-item" href="/your_contribution" name="contri"> Your Contributions</a></li>
+            <li><a class="dropdown-item" id="change-password" href="/change_password_form">Change Password</a></li>
             <li><a class="dropdown-item" href="/signout">Sign out</a></li>
+            <li><a class="dropdown-item" id="confirm-delete" href="/delete_account">Delete Account</a></li>
+            
           </ul>
           {% else %}
           <ul class="dropdown-menu">
@@ -78,23 +82,29 @@
           {% endif %}
         </div>
       </nav>
-    <section style="background-color:#00a0ff; height:25; " >
-        <br>
-          <h1  style="color: #ffffff"><center>Welcome to Knowledge Platform</center></h1>
-          <br><br>
-          <h4 style="color: #ffffff"><center> A platform designed by CData to let users input any knowledge they have percieved and help others through the use of that knowledge.</center></h4><br>
-      </section><br>
-      <center>
-        <form action="freshdeskdisplay" method="post">
-            {% csrf_token %}
-           <label for="api">Enter Freshdesk API Key:</label>
-           <input type="text" id="api" name="api"><br><br>
-           <label for="domain">Enter your Freshdesk Domain:</label>
-           <input type="text" id="domain" name="domain"><br><br>
-    
-           <button type="submit">GetDetails</button>
-        </form>
-    </center>
+      <div class="container">
+        <div class="row m-5 no-gutters shadow-lg">
+          <div class="col-md-6 d-none d-md-block">
+            <img src="/static/33.png" class="img-fluid" style="min-height:100%;" />
+          </div>
+          <div class="col-md-6 bg-white p-5">
+            <h3 class="text-center"><strong>Bug Detection using FreshDesk</strong></h3><br>
+            <div class="form-style">
+              <form action="freshdesk" method="post">
+                {% csrf_token %}
+                <div class="form-group pb-3">
+                  <input type="text" placeholder="Enter FreshDesk Ticket Id" name="tid" class="form-control" id="jiraid">
+                </div>
+               
+                <div class="pb-2">
+                  <button type="submit" class="btn btn-dark w-100 font-weight-bold mt-2">Submit</button>
+                </div>
+
+                <div class="pb-2">
+                  <a class="btn btn-dark w-100 font-weight-bold mt-2" href="freshdeskdisplay">Get Details</a>
+                </div>
+
+              </form>
     
 </body>
 </html>
