--- a/templates/knowledgepages/freshdeskdisplay.html
+++ b/templates/knowledgepages/freshdeskdisplay.html
@@ -9,11 +9,51 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="icon" href="https://klaindustries.com/wp-content/uploads/2017/07/Light-bulb-icon.png" width="300" height="300" type="image/icon type">
-    <title> {% block title %}FreshDesk Display{% endblock title %} | Knowledge Platform</title>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title> {% block title %}Jira Display{% endblock title %} | Knowledge Platform</title>  
+    <style>
+      body {
+        background: linear-gradient( rgba(0, 160, 255, 0.5) 100%, rgba(0, 144, 229, 0.5)100%),url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');
+      }
+      .form-style input {
+        border: 0;
+        height: 50px;
+        border-radius: 0;
+        border-bottom: 1px solid #ebebeb;
+      }
+      .form-style input:focus {
+        border-bottom: 1px solid #007bff;
+        box-shadow: none;
+        outline: 0;
+        background-color: #ebebeb;
+      }
+      .sideline {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: #ccc;
+      }
+      button {
+        height: 50px;
+      }
+      .sideline:before,
+      .sideline:after {
+        content: "";
+        border-top: 1px solid #ebebeb;
+        margin: 0 20px 0 0;
+        flex: 1 0 20px;
+      }
+      
+      .sideline:after {
+        margin: 0 0 0 20px;
+      }
+    </style>
   </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">KNOWLEDGE PLATFORM</a>
+      <a class="navbar-brand" href="#"><img src="/static/29.png" height="40" width="120"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,7 +61,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item inactive">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/"><i class="fa fa-fw fa-home"></i>Home</a>
           </li>      
       
           <li class="nav-item inactive">
@@ -29,7 +69,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Filter Knowledges
+              Filter Knowledges 
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="defects" >Defects <span class="sr-only">(current)</span></a>
@@ -47,11 +87,13 @@
             <a class="dropdown-item" href="freshdesk">FreshDesk</a>
           </div>
         </li>
+        
       </div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button> &nbsp &nbsp&nbsp&nbsp
-      </form> 
+      <form class="form-inline my-2 my-lg-0" method=POST action={% url 'search'%} >
+        {%csrf_token%}
+        <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search" name="searched">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-fw fa-search"></i></button> &nbsp &nbsp&nbsp&nbsp
+      </form>
       <div class="btn-group">
         <img type="button" src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/30/ffffff/external-user-interface-kiranshastry-lineal-kiranshastry-1.png" class="btn btn-primary"/>
         <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" >
@@ -62,7 +104,11 @@
         <ul class="dropdown-menu">
           {% comment %} <li><a class="dropdown-item" href="/signup" >Sign up</a></li> {% endcomment %}
           {% comment %} <li><a class="dropdown-item" href="/signin">Sign in</a></li> {% endcomment %}
+          <li><a class="dropdown-item" href="/your_contribution" name="contri"> Your Contributions</a></li>
+          <li><a class="dropdown-item" id="change-password" href="/change_password_form">Change Password</a></li>
           <li><a class="dropdown-item" href="/signout">Sign out</a></li>
+          <li><a class="dropdown-item" id="confirm-delete" href="/delete_account">Delete Account</a></li>
+          
         </ul>
         {% else %}
         <ul class="dropdown-menu">
@@ -73,32 +119,35 @@
         {% endif %}
       </div>
     </nav>
-    <section style="background-color:#00a0ff; height:25; " >
-      <br>
-      <h1  style="color: #ffffff"><center>Welcome to Knowledge Platform</center></h1>
-      <br><br>
-      <h4 style="color: #ffffff"><center> A platform designed by CData to let users input any knowledge they have percieved and help others through the use of that knowledge.</center></h4><br>
-    </section><br>
+   <br>
 
-
-<div class="container mb-3 py-4">
-    <h1 class="text-center" style = "color:#00a0ff">FRESHDESK FETCHED DATA</h1>
-    <center>
-
-      <table> <thead> <tr> <th>Ticket ID &nbsp&nbsp</th>  <th>Ticket Name</th> </tr> </thead> <tbody>
-        {% for i,j in ml %}
-      <tr>
-          <td> {{ i }} &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td> 
-          <td> {{ j }} &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
-          {% comment %} <td> {{ k }} &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td> {% endcomment %}
-      </tr>
-      {% endfor %}
-  </tbody>
-  </table>    
-
+    <center><h3 style="color:white;"><strong>Bug Reported in Freshdesk for the Id you entered</strong></h3><br></center>
+    <div class="container">
+      <center>
+        <div class="col-md-6 bg-white p-5">
+          
+          
+          <div class="form-style">
+            <form action="freshdesk" method="post">
+              {% csrf_token %}
+              
         
-    </center>
-    
+              
+              {% for i,j,k in ml%}
+              
+           <h5> <b>TicketId</b> : {{i}}<br><br></h5>
+           <h5> <b>Summary</b> : {{j}}<br><br></h5>
+           <h5> <b>Description</b> : {{k}}<br><br></h5>
+      
+           
+          </form>
+           {% endfor %}
+           <div class="pb-2">
+            <a class="btn btn-dark w-100 font-weight-bold mt-2" href="contribute_bug2">Contribute Knowledge for the above Bug</a>
+          </div>
+          </center>
+
+  
 </div>
 </body>
 </html>
