Tags generation algorithm added

--- a/templates/knowledgepages/freshdesk.html
+++ b/templates/knowledgepages/freshdesk.html
@@ -100,9 +100,9 @@
                   <button type="submit" class="btn btn-dark w-100 font-weight-bold mt-2">Submit</button>
                 </div>
 
-                <div class="pb-2">
+                {% comment %} <div class="pb-2">
                   <a class="btn btn-dark w-100 font-weight-bold mt-2" href="freshdeskdisplay">Get Details</a>
-                </div>
+                </div> {% endcomment %}
 
               </form>
     
