--- a/templates/knowledgepages/jira.html
+++ b/templates/knowledgepages/jira.html
@@ -95,6 +95,9 @@
                 <div class="form-group pb-3">
                   <input type="text" placeholder="Enter Bug ID" name="jiraid" class="form-control" id="jiraid">
                 </div>
+                <div class="form-group pb-3">
+                  <input type="text" placeholder="Enter Assignee Name" name="aname" class="form-control" id="aname">
+                </div>
                
                 <div class="pb-2">
                   <button type="submit" class="btn btn-dark w-100 font-weight-bold mt-2">Submit</button>
