Admin Page Link added

--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -152,13 +152,15 @@
                     <button type="submit" class="btn btn-dark w-100 font-weight-bold mt-2">Submit</button>
                   </div>
                 </form>
+                
                 <div class="sideline">OR</div>
                 <div>
-                  <button type="submit" class="btn btn-primary w-100 font-weight-bold mt-2">Login With ZOHO</button>
+                  <a class="btn btn-primary w-100 font-weight-bold mt-2" href="/admin">Login as Admin</a>
                 </div>
                 <div class="pt-4 text-center"><a href="/signup"">Sign Up</a>
                 </div>
               </div>
+          
         
             </div>
           </div>
