--- a/templates/activation_failed.html
+++ b/templates/activation_failed.html
@@ -1,5 +1,1 @@
-{% autoescape off %}
-
-Activation failed, please try again!
-
-{% endautoescape %}
+{% autoescape off %} Activation failed, please try again! {% endautoescape %}
