--- a/templates/knowledgepages/jiradisplay.html
+++ b/templates/knowledgepages/jiradisplay.html
@@ -1,152 +1,158 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="icon" href="https://klaindustries.com/wp-content/uploads/2017/07/Light-bulb-icon.png" width="300" height="300" type="image/icon type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title> {% block title %}Jira Display{% endblock title %} | Knowledge Platform</title>  
+    <title> {% block title %}Jira Display{% endblock title %} | Knowledge Platform</title>
     <style>
-      body {
-        background: linear-gradient( rgba(0, 160, 255, 0.5) 100%, rgba(0, 144, 229, 0.5)100%),url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');
-      }
-      .form-style input {
-        border: 0;
-        height: 50px;
-        border-radius: 0;
-        border-bottom: 1px solid #ebebeb;
-      }
-      .form-style input:focus {
-        border-bottom: 1px solid #007bff;
-        box-shadow: none;
-        outline: 0;
-        background-color: #ebebeb;
-      }
-      .sideline {
-        display: flex;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        color: #ccc;
-      }
-      button {
-        height: 50px;
-      }
-      .sideline:before,
-      .sideline:after {
-        content: "";
-        border-top: 1px solid #ebebeb;
-        margin: 0 20px 0 0;
-        flex: 1 0 20px;
-      }
-      
-      .sideline:after {
-        margin: 0 0 0 20px;
-      }
+        body {
+            background: linear-gradient( rgba(0, 160, 255, 0.5) 100%, rgba(0, 144, 229, 0.5)100%), url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');
+        }
+        
+        .form-style input {
+            border: 0;
+            height: 50px;
+            border-radius: 0;
+            border-bottom: 1px solid #ebebeb;
+        }
+        
+        .form-style input:focus {
+            border-bottom: 1px solid #007bff;
+            box-shadow: none;
+            outline: 0;
+            background-color: #ebebeb;
+        }
+        
+        .sideline {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #ccc;
+        }
+        
+        button {
+            height: 50px;
+        }
+        
+        .sideline:before,
+        .sideline:after {
+            content: "";
+            border-top: 1px solid #ebebeb;
+            margin: 0 20px 0 0;
+            flex: 1 0 20px;
+        }
+        
+        .sideline:after {
+            margin: 0 0 0 20px;
+        }
     </style>
-  </head>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="/static/29.png" height="40" width="120"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><img src="/static/29.png" height="40" width="120"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item inactive">
-            <a class="nav-link" href="/"><i class="fa fa-fw fa-home"></i>Home</a>
-          </li>      
-      
-          <li class="nav-item inactive">
-            <a class="nav-link" href="/contribute">Contribute<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item inactive">
+                    <a class="nav-link" href="/"><i class="fa fa-fw fa-home"></i>Home</a>
+                </li>
+
+                <li class="nav-item inactive">
+                    <a class="nav-link" href="/contribute">Contribute<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Filter Knowledges 
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="defects" >Defects <span class="sr-only">(current)</span></a>
-              <a class="dropdown-item" href="enhancements">Enhancement</a>
-              <a class="dropdown-item" href="opportunity">Opportunity</a>
-              <a class="dropdown-item" href="supportticket">Support Ticket</a>
-            </div>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="defects">Defects <span class="sr-only">(current)</span></a>
+                        <a class="dropdown-item" href="enhancements">Enhancement</a>
+                        <a class="dropdown-item" href="opportunity">Opportunity</a>
+                        <a class="dropdown-item" href="supportticket">Support Ticket</a>
+                    </div>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Issue Tracking <span class="sr-only">(current)
             </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="jira">Jira</a>
-            <a class="dropdown-item" href="salesforce">Salesforce</a>
-            <a class="dropdown-item" href="freshdesk">FreshDesk</a>
-          </div>
-        </li>
-        
-      </div>
-      <form class="form-inline my-2 my-lg-0" method=POST action={% url 'search'%} >
-        {%csrf_token%}
-        <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search" name="searched">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-fw fa-search"></i></button> &nbsp &nbsp&nbsp&nbsp
-      </form>
-      <div class="btn-group">
-        <img type="button" src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/30/ffffff/external-user-interface-kiranshastry-lineal-kiranshastry-1.png" class="btn btn-primary"/>
-        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" >
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="jira">Jira</a>
+                            <a class="dropdown-item" href="salesforce">Salesforce</a>
+                            <a class="dropdown-item" href="freshdesk">FreshDesk</a>
+                        </div>
+                    </li>
+
+        </div>
+        <form class="form-inline my-2 my-lg-0" method=POST action={% url 'search'%}>
+            {%csrf_token%}
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Knowledges" aria-label="Search" name="searched">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-fw fa-search"></i></button> &nbsp &nbsp&nbsp&nbsp
+        </form>
+        <div class="btn-group">
+            <img type="button" src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/30/ffffff/external-user-interface-kiranshastry-lineal-kiranshastry-1.png" class="btn btn-primary" />
+            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
           <p style="display:inline">{{user.first_name}}</p>
           <span class="visually-hidden"></span>
-        </button>
-        {% if user.is_authenticated %}
-        <ul class="dropdown-menu">
-          {% comment %} <li><a class="dropdown-item" href="/signup" >Sign up</a></li> {% endcomment %}
-          {% comment %} <li><a class="dropdown-item" href="/signin">Sign in</a></li> {% endcomment %}
-          <li><a class="dropdown-item" href="/your_contribution" name="contri"> Your Contributions</a></li>
-          <li><a class="dropdown-item" id="change-password" href="/change_password_form">Change Password</a></li>
-          <li><a class="dropdown-item" href="/signout">Sign out</a></li>
-          <li><a class="dropdown-item" id="confirm-delete" href="/delete_account">Delete Account</a></li>
-          
-        </ul>
-        {% else %}
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="/signup" >Sign up</a></li>
-          <li><a class="dropdown-item" href="/signin">Sign in</a></li>
-          {% comment %} <li><a class="dropdown-item" href="/signout">Sign out</a></li> {% endcomment %}
-        </ul>
-        {% endif %}
-      </div>
+        </button> {% if user.is_authenticated %}
+            <ul class="dropdown-menu">
+                {% comment %}
+                <li><a class="dropdown-item" href="/signup">Sign up</a></li> {% endcomment %} {% comment %}
+                <li><a class="dropdown-item" href="/signin">Sign in</a></li> {% endcomment %}
+                <li><a class="dropdown-item" href="/your_contribution" name="contri"> Your Contributions</a></li>
+                <li><a class="dropdown-item" id="change-password" href="/change_password_form">Change Password</a></li>
+                <li><a class="dropdown-item" href="/signout">Sign out</a></li>
+                <li><a class="dropdown-item" id="confirm-delete" href="/delete_account">Delete Account</a></li>
+
+            </ul>
+            {% else %}
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/signup">Sign up</a></li>
+                <li><a class="dropdown-item" href="/signin">Sign in</a></li>
+                {% comment %}
+                <li><a class="dropdown-item" href="/signout">Sign out</a></li> {% endcomment %}
+            </ul>
+            {% endif %}
+        </div>
     </nav>
-   <br>
+    <br>
 
-    <center><h3 style="color:white;"><strong>Bug Reported in JIRA for the Id you entered</strong></h3><br></center>
+    <center>
+        <h3 style="color:white;"><strong>Bug Reported in JIRA for the Id you entered</strong></h3><br></center>
     <div class="container">
-      <center>
-        <div class="col-md-6 bg-white p-5">
-          
-          
-          <div class="form-style">
-            <form action="jira" method="post">
-              {% csrf_token %}
-              
-        
-              
-              {% for i,j,k,l in ml%}
-           <h5> <b>BugId</b> : {{j}}<br><br></h5>
-           <h5> <b>Summary</b> : {{i}}<br><br></h5>
-           <h5> <b>Description</b> : {{k}}<br><br></h5>
-           <h5> <b>Assignee</b> : {{l}}<br><br></h5>
-           
-          </form>
-           {% endfor %}
-           <div class="pb-2">
-            <a class="btn btn-dark w-100 font-weight-bold mt-2" href="contribute_bug">Contribute Knowledge for the above Bug</a>
-          </div>
-          </center>
+        <center>
+            <div class="col-md-6 bg-white p-5">
 
-  
-</div>
+
+                <div class="form-style">
+                    <form action="jira" method="post">
+                        {% csrf_token %} {% for i,j,k,l in ml%}
+                        <h5> <b>BugId</b> : {{j}}<br><br></h5>
+                        <h5> <b>Summary</b> : {{i}}<br><br></h5>
+                        <h5> <b>Description</b> : {{k}}<br><br></h5>
+                        <h5> <b>Assignee</b> : {{l}}<br><br></h5>
+
+                    </form>
+                    {% endfor %}
+                    <div class="pb-2">
+                        <a class="btn btn-dark w-100 font-weight-bold mt-2" href="contribute_bug">Contribute Knowledge for the above Bug</a>
+                    </div>
+        </center>
+
+
+        </div>
 </body>
+
 </html>
